# upgrader

./: .gitignore  README.md  diceblox.bat  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py  main.py  settings.py
src/managers/: captcha_manager.py  webshare_manager.py
src/managers/upgrader/: upgrader_manager.py
src/managers/upgrader/services/: account_service.py  auth_service.py  client_service.py  promo_service.py  stat_service.py
